--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <div class="brand">
             <img src="img/logo.png" alt="Hector Milone">
-            <h1>Calculadora Aplicación WEB</h1>
+            <h1>Calculator WEB</h1>
         </div>
     </header>
 
